--- a/Ch02FutueValueJames/Ch02FutueValueJames/Ch02FutueValueJames.csproj
+++ b/Ch02FutueValueJames/Ch02FutueValueJames/Ch02FutueValueJames.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Views\Shared\" />
+  </ItemGroup>
+
 </Project>
